refactored dto project and removed perf project