@@ -3,41 +3,6 @@ plugins {
     id "com.heroku.sdk.heroku-gradle" version "2.0.0"
 }
 
-
-// TODO this isn't appropriate for all subprojects, just the Java ones (not React)
-subprojects {
-
-    apply plugin: 'java' // core plugin provided by gradle
-    
-    group = 'com.seebie'
-    version = '1.0-SNAPSHOT'
-
-    sourceCompatibility = JavaVersion.VERSION_17
-
-    repositories {
-        mavenCentral()
-    }
-
-    test {
-        useJUnitPlatform()
-    }
-
-
-    // use preview features
-    tasks.withType(JavaCompile) {
-        options.compilerArgs += "--enable-preview"
-        // options.compilerArgs += "-Xlint:preview"
-        options.compilerArgs += "-Xlint:unchecked"
-        options.compilerArgs += "-Xlint:deprecation"
-    }
-    tasks.withType(Test) {
-        jvmArgs += "--enable-preview"
-    }
-    tasks.withType(JavaExec) {
-        jvmArgs += '--enable-preview'
-    }
-}
-
 // use heroku gradle plugin
 // https://github.com/heroku/heroku-gradle
 heroku {
@@ -69,16 +34,4 @@ task build () {
     description 'builds the entire project with all sub-modules'
     dependsOn('copyWebApp')
     dependsOn(':server:bootJar')
-}
-
-project(':perf') {
-    dependencies {
-        implementation project(':dto')
-    }
-}
-
-project(':server') {
-    dependencies {
-        implementation project(':dto')
-    }
 }
